Bug 511604 - Dolphin's view mode font settings are not properly isolated after application restart
Summary: Dolphin's view mode font settings are not properly isolated after application...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: git-master
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-04 09:28 UTC by liweinan@kylinos.cn
Modified: 2025-11-04 11:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description liweinan@kylinos.cn 2025-11-04 09:28:49 UTC
SUMMARY
Dolphin's custom label font setting leaks between view modes after restarting

STEPS TO REPRODUCE
1. Open Dolphin
2. Go to Settings → Configure Dolphin → View
3. Select the "Details" tab, set "Label font" to a distinctive custom font (e.g., Noto Sans, size 26, Italic)
4. Select the "Icons" tab, ensure "Label font" is set to "Use system font"
5. Switch to Details view mode (to apply the custom font)
6. Switch to Icons view mode (to confirm it uses system font)
7. Close Dolphin completely
8. Reopen Dolphin
OBSERVED RESULT
The labels in Icons view are displayed in the custom font that was set for Details view, instead of using the system font as configured.

EXPECTED RESULT
The Icons view should consistently use the system font after restarting Dolphin. Font settings for each view mode should be independent and persist correctly.

SOFTWARE/OS VERSIONS
Operating System: Ubuntu 25.04
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.3
Kernel Version: 6.14.0-34-generic (64-bit)
Graphics Platform: X11
Processors: 6 × AMD Ryzen 5 3600 6-Core Processor
Memory: 7.2 GiB of RAM
Graphics Processor: llvmpipe

ADDITIONAL INFORMATION
Technical analysis: The issue appears to be in DolphinItemListView::updateFont(). When switching from a view mode with custom font to a view mode with system font, the KItemListStyleOption is not properly synchronized with the base font system, causing font settings to persist incorrectly between view modes after application restart.
Comment 1 Bug Janitor Service 2025-11-04 09:49:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1091
Comment 2 Méven 2025-11-04 11:30:10 UTC
Git commit 8010ae0286fb30d51fff150703096f7ebe6172a9 by Méven Car, on behalf of weinan li.
Committed on 04/11/2025 at 10:32.
Pushed by meven into branch 'master'.

dolphinitemlistview: ensure font settings isolation between view modes

Ensure proper font synchronization between KItemListStyleOption and the base font system. Previously, when switching from a view mode with custom font to one with system font, the style option would retain the custom font setting, causing font settings to persist incorrectly between view modes after application restart.

The changes:
- Unify the font setting logic for both system and custom fonts
- Ensure style option font is synchronized with actual font in system mode

M  +6    -7    src/views/dolphinitemlistview.cpp

https://invent.kde.org/system/dolphin/-/commit/8010ae0286fb30d51fff150703096f7ebe6172a9