dolphinitemlistview: ensure font settings isolation between view modes

Ensure proper font synchronization between KItemListStyleOption and the base font system. Previously, when switching from a view mode with custom font to one with system font, the style option would retain the custom font setting, causing font settings to persist incorrectly between view modes after application restart.

The changes:
- Unify the font setting logic for both system and custom fonts
- Ensure style option font is synchronized with actual font in system mode

BUG: 511604